[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "toonbuilder"
dynamic = ["version"]
authors = [
  { name="Polybit" },
]
description = "Convert JSON, XML, and TOML data to TOON, a schema-aware data format for LLM prompts."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
# TOML parsing uses the stdlib `tomllib` on Python 3.11+; the `toml` package is
# needed on older Pythons and for serialising TOON back to TOML.
toml = ["toml"]
test = ["pytest"]

[project.urls]
"Homepage" = "https://github.com/0xPolybit/toonbuilder"
"Bug Tracker" = "https://github.com/0xPolybit/toonbuilder/issues"

[tool.setuptools.packages.find]
include = ["toonbuilder*"]

[tool.setuptools_scm]
# Version is derived from git tags (e.g. tag "v0.3.0" -> version "0.3.0").
# fallback_version keeps `pip install` working in checkouts with no tags
# reachable (shallow clones, tarballs without .git, etc).
fallback_version = "0.0.0"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
